@@ -53,8 +53,13 @@ Linux)
 	;;
 esac
 
+# Use this for a NAT-T setup
 LOCAL="${LOCAL_ADDR}[${LOCAL_PORT}]"
 REMOTE="${REMOTE_ADDR}[${REMOTE_PORT}]"
+
+# Use this for a non NAT-T setup
+#LOCAL="${LOCAL_ADDR}"
+#REMOTE="${REMOTE_ADDR}"
 
 echo "
 deleteall ${REMOTE_ADDR} ${LOCAL_ADDR} esp;
